// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DoughnutComponent should match snapshot 1`] = `
<div
  data-testid="charts-container"
>
  <div
    data-doughnut="true"
    data-testid="charts-list"
  >
    <div
      data-height="400"
      data-testid="chart"
      data-type="doughnut"
    >
      <div
        data-testid="chart-data"
      >
        {"labels":["Red","Blue","Yellow","Green","Purple","Orange"],"datasets":[{"label":"# of Votes","data":[12,19,3,5,2,3],"backgroundColor":["rgba(255, 99, 132, 0.2)","rgba(54, 162, 235, 0.2)","rgba(255, 206, 86, 0.2)","rgba(75, 192, 192, 0.2)","rgba(153, 102, 255, 0.2)","rgba(255, 159, 64, 0.2)"],"borderColor":["rgba(255, 99, 132, 1)","rgba(54, 162, 235, 1)","rgba(255, 206, 86, 1)","rgba(75, 192, 192, 1)","rgba(153, 102, 255, 1)","rgba(255, 159, 64, 1)"],"borderWidth":1}]}
      </div>
      <div
        data-testid="chart-options"
      >
        {"responsive":false,"plugins":{"legend":{"position":"top"},"title":{"display":true,"text":"Supply Chain Activation"}}}
      </div>
    </div>
  </div>
</div>
`;

exports[`DoughnutComponent should match snapshot with custom data 1`] = `
<div
  data-testid="charts-container"
>
  <div
    data-doughnut="true"
    data-testid="charts-list"
  >
    <div
      data-height="400"
      data-testid="chart"
      data-type="doughnut"
    >
      <div
        data-testid="chart-data"
      >
        {"labels":["A","B"],"datasets":[{"label":"Test","data":[70,30],"backgroundColor":["red","blue"]}]}
      </div>
      <div
        data-testid="chart-options"
      >
        {"responsive":false,"plugins":{"legend":{"position":"top"},"title":{"display":true,"text":"Supply Chain Activation"}}}
      </div>
    </div>
  </div>
</div>
`;
